fixtures on mobile

--- a/style.css
+++ b/style.css
@@ -1052,9 +1052,7 @@ footer ul li a:hover{
         height: 40vh;
     }
 
-    .fixtures-btn{
-        display: none;
-    }
+    
 
 
 
